successful API call and Dataframe

--- a/Ins_OpenWeatherRequest.ipynb
+++ b/Ins_OpenWeatherRequest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -11,12 +11,12 @@
     "# Dependencies\n",
     "import json\n",
     "import requests\n",
-    "from config import api_key"
+    "from api_keys import owm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -24,22 +24,22 @@
    "source": [
     "# Save config information\n",
     "url = \"https://api.openweathermap.org/data/2.5/weather?\"\n",
-    "city = \"London\"\n",
+    "city = \"Austin\"\n",
     "\n",
     "# Build query URL\n",
-    "query_url = url + \"appid=\" + api_key + \"&q=\" + city"
+    "query_url = url + \"appid=\" + owm + \"&q=\" + city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The weather API responded with: {'coord': {'lon': -0.1257, 'lat': 51.5085}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04d'}], 'base': 'stations', 'main': {'temp': 296.25, 'feels_like': 296.55, 'temp_min': 294.42, 'temp_max': 297.64, 'pressure': 1015, 'humidity': 74}, 'visibility': 10000, 'wind': {'speed': 2.06, 'deg': 250}, 'clouds': {'all': 100}, 'dt': 1688843102, 'sys': {'type': 2, 'id': 2075535, 'country': 'GB', 'sunrise': 1688788371, 'sunset': 1688847466}, 'timezone': 3600, 'id': 2643743, 'name': 'London', 'cod': 200}.\n"
+      "The weather API responded with: {'coord': {'lon': -97.7431, 'lat': 30.2672}, 'weather': [{'id': 801, 'main': 'Clouds', 'description': 'few clouds', 'icon': '02d'}], 'base': 'stations', 'main': {'temp': 307.77, 'feels_like': 308.61, 'temp_min': 306.58, 'temp_max': 308.7, 'pressure': 1019, 'humidity': 36}, 'visibility': 10000, 'wind': {'speed': 4.12, 'deg': 130}, 'clouds': {'all': 20}, 'dt': 1690507557, 'sys': {'type': 2, 'id': 2003218, 'country': 'US', 'sunrise': 1690458374, 'sunset': 1690507709}, 'timezone': -18000, 'id': 4671654, 'name': 'Austin', 'cod': 200}.\n"
      ]
     }
    ],
