update Weather API, started VacationAPI

--- a/VacationAPI.ipynb
+++ b/VacationAPI.ipynb
@@ -93,11 +93,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Windspeed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fuerte olimpo</td>\n",
+       "      <td>py</td>\n",
+       "      <td>-21</td>\n",
+       "      <td>-58</td>\n",
+       "      <td>86.05</td>\n",
+       "      <td>36</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>lamu</td>\n",
+       "      <td>ke</td>\n",
+       "      <td>-5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>77.58</td>\n",
+       "      <td>86</td>\n",
+       "      <td>31</td>\n",
+       "      <td>19.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>san pedro pochutla</td>\n",
+       "      <td>mx</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-97</td>\n",
+       "      <td>83.16</td>\n",
+       "      <td>68</td>\n",
+       "      <td>53</td>\n",
+       "      <td>3.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>longyearbyen</td>\n",
+       "      <td>sj</td>\n",
+       "      <td>90</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32.94</td>\n",
+       "      <td>92</td>\n",
+       "      <td>25</td>\n",
+       "      <td>14.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>port-aux-francais</td>\n",
+       "      <td>tf</td>\n",
+       "      <td>-84</td>\n",
+       "      <td>76</td>\n",
+       "      <td>-61.55</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>11.41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 City Country  Latitude  Longitude  Temperature  Humidity  \\\n",
+       "0       fuerte olimpo      py       -21        -58        86.05        36   \n",
+       "1                lamu      ke        -5         45        77.58        86   \n",
+       "2  san pedro pochutla      mx        10        -97        83.16        68   \n",
+       "3        longyearbyen      sj        90          3        32.94        92   \n",
+       "4   port-aux-francais      tf       -84         76       -61.55       100   \n",
+       "\n",
+       "   Cloudiness  Windspeed  \n",
+       "0          18       5.08  \n",
+       "1          31      19.62  \n",
+       "2          53       3.06  \n",
+       "3          25      14.81  \n",
+       "4         100      11.41  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "w_df = pd.read_csv('output_data/WeatherAPI_Cities_Weather.csv')\n",
+    "w_df.head()"
    ]
   },
   {
@@ -112,17 +225,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gmaps.datasets\n",
+    "gmaps.configure(api_key=goog)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n",
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(w_df['Latitude'].dtype)\n",
+    "print(w_df['Longitude'].dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w_df['Latitude'] = w_df['Latitude'].astype(float)\n",
+    "w_df['Longitude'] = w_df['Longitude'].astype(float)\n",
+    "w_df['Humidity'] = w_df['Humidity'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = [(lat, lon) for lat, lon in zip(w_df['Latitude'], w_df['Longitude'])]\n",
+    "heatmap_layer = gmaps.heatmap_layer(locations, weights=w_df['Humidity'])\n",
+    "\n",
+    "markers = gmaps.marker_layer(locations)\n",
+    "fig = gmaps.figure()\n",
+    "fig.add_layer(markers)\n",
+    "fig.add_layer(heatmap_layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1312af54062c4eedb537911a91782541",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,9 +389,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:pyvizenv] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-pyvizenv-py"
   },
   "language_info": {
    "codemirror_mode": {
